	  finish() protocol, and so on.
	- removed delay(), setDelay(), error(), setError(), dataRate(),
	  setDataRate() methods from cGate; use methods from the gate's channel 
	  instead: check_and_cast<cBasicChannel *>(gate->channel())->setDelay(0.1);
	  or use generic component parameter access instead: gate->channel()->par("delay")=0.1.
	- added cIdealChannel which lets messages through without any change or delay.
	- breaking change in cBasicChannel behaviour: implicit queueing is no longer supported:
	  sending on a busy gate (when simTime() < gate->transmissionFinishes()) results in an
	  error. Thus, using a special transmitter module (with an internal queue) is now
	  sort of mandatory when channels with data rate are in use.
	- setting channel parameters from the ini file:
	   (1) make the parameter input, e.g.: 
	         a.out --> { delay=default(0); } --> b.in;
	   (2) add <fromgate-fullpath>.channel.<paramname> = <value> into the ini file, e.g.:
	         **.a.out.channel.delay = 10ms
	- TODO: make it easier to find the first gate with datarate (as g->transmissionFinishes()
	  is "non-transitive"). Add another method? or make transmissionFinishes() transitive?

	Dynamic module/channel creation:
	- finalizeParameters() must be called (for channels, this reads input params from omnetpp.ini;
	  for modules, also creates gates [since gate vector sizes may depend on parameter values])

	Exception handling changed:
	- now all our exceptions subclass from std::exception (e.g. cException extends std::exception)
	- exceptions are now thrown by value not by pointer (s/throw new/throw/g)
	- hint: catch std::exception if you don't need the exception to be of a specific type
	- XXX opp_runtime_error currently doesn't obey debug-on-errors.
	- TODO before release: make sure there's no "throw new" ANYWHERE in the sources!

	DisplayString:
	- parse() no longer interprets literal "\t", "\n" escape sequences; it is the job of the