@@ -54,9 +54,10 @@ const char *NEDParser::getBuiltInDeclarations()
         "{\n"
         "    @class(cBasicChannel);\n"
         "    bool disabled = false;\n"
-        "    double delay = 0s @unit(s);\n"
-        "    double error = 0;\n"
-        "    double datarate = 0bps @unit(bps);\n"
+        "    double delay = 0s @unit(s); // propagation delay\n"
+        "    double datarate = 0bps @unit(bps); // bits per second\n"
+        "    double ber = 0; // bit error rate (BER)\n"
+        "    double per = 0; // packet error rate (PER)\n"
         "}\n"
         "\n"
         "moduleinterface IBidirectionalChannel\n"
